salesforce/generated/sunrun_ingest_api/objects/hubbell_account_OpportunityLineItem__dll/fields/KQ_LineItemId__c.field-meta.xml
<CustomField>
    <fullName>KQ_LineItemId__c</fullName>
    <label>KQ_LineItemId</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <externalName>KQ_LineItemId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>KEY_QUALIFIER</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>