salesforce/generated/sunrun_ingest_api/objects/hubbell_account_OpportunityLineItem__dll/fields/LineItemId__c.field-meta.xml
<CustomField>
    <fullName>LineItemId__c</fullName>
    <label>LineItemId</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>LineItemId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>